# bananadot

./: .gitignore  requirements.txt  vercel.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/pipeline/: __init__.py  bundle.py  cleanup.py  generate.py  godot.py
backend/app/specs/: button.json  checkbox.json  panel.json  progress_bar.json
backend/app/static/: index.html
backend/app/static/godot/: viewer.html  viewer.pck
godot_viewer/: README.md  export_presets.cfg  project.godot  viewer.gd  viewer.gd.uid  viewer.tscn
scripts/: export-viewer.sh
tasks/: TODO.md  lessons.md  plan-vector-preview.md
tasks/archive/: 2026-04-16-v0-end-to-end-pipeline.md
